fix: Wrong color in the grid column menu

--- a/styles/web/common/inputs.less
+++ b/styles/web/common/inputs.less
@@ -188,6 +188,10 @@ span.k-dropdown,
     -webkit-touch-callout: none;
 }
 
+.k-header-column-menu {
+    color: inhert;
+}
+
 .k-list-scroller
 {
     position: relative;
